--- a/index.html
+++ b/index.html
@@ -8,10 +8,45 @@
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" type="image/jpg" href="favicon.ico">
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </head>
 
 <body>
+    <div class="calculator">
+        <div class="display">
+            <div class="previous-operation">
+                <div id="previous-operation">0</div>
+                <div id="operator">+</div>
+            </div>
+            <div id="current-operation">0</div>
+        </div>
+
+        <div class="buttons-panel">
+            <div class="left-part">
+                <button id="clear">C</button>
+                <button id="change-sign">±</button>
+                <button id="backspace">⌫</button>
+                <button class="number-button">7</button>
+                <button class="number-button">8</button>
+                <button class="number-button">9</button>
+                <button class="number-button">4</button>
+                <button class="number-button">5</button>
+                <button class="number-button">6</button>
+                <button class="number-button">1</button>
+                <button class="number-button">2</button>
+                <button class="number-button">3</button>
+                <button class="number-button">0</button>
+                <button id="point">.</button>
+                <button id="equal">=</button>
+            </div>
+            <div class="right-part">
+                <button id="divide">/</button>
+                <button id="multiply">*</button>
+                <button id="subtract">-</button>
+                <button id="add">+</button>
+            </div>
+        </div>
+    </div>
 
 </body>
 
