--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <div class="calculator">
         <div class="display">
             <div class="previous-operation">
-                <div id="previous-operation">0</div>
-                <div id="operator">+</div>
+                <div id="previous-operation">&nbsp;</div>
+                <div id="operator">&nbsp;</div>
             </div>
             <div id="current-operation">0</div>
         </div>
