--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" type="image/jpg" href="favicon.ico">
+    <link rel="shortcut icon" type="image/jpg" href="../images/favicon.ico">
     <script src="script.js" defer></script>
 </head>
 
@@ -22,30 +22,31 @@
         </div>
 
         <div class="buttons-panel">
-            <div class="left-part">
                 <button id="clear">C</button>
                 <button id="change-sign">±</button>
                 <button id="backspace">⌫</button>
+                <button id="divide">/</button>
                 <button class="number-button">7</button>
                 <button class="number-button">8</button>
                 <button class="number-button">9</button>
+                <button id="multiply">*</button>
                 <button class="number-button">4</button>
                 <button class="number-button">5</button>
                 <button class="number-button">6</button>
+                <button id="subtract">-</button>
                 <button class="number-button">1</button>
                 <button class="number-button">2</button>
                 <button class="number-button">3</button>
+                <button id="add">+</button>
                 <button class="number-button">0</button>
                 <button id="point">.</button>
                 <button id="equal">=</button>
-            </div>
-            <div class="right-part">
-                <button id="divide">/</button>
-                <button id="multiply">*</button>
-                <button id="subtract">-</button>
-                <button id="add">+</button>
-            </div>
         </div>
+    </div>
+
+    <div class="footer">
+        <img src="../images/github.png" alt="Github: ">
+        <div class="text"><a href="https://github.com/ffox1">ffox1</a></div>
     </div>
 
 </body>
