--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
 
     <div class="footer">
-        <img src="../images/github.png" alt="Github: ">
+        <img src="images/github.png" alt="Github: ">
         <div class="text"><a href="https://github.com/ffox1">ffox1</a></div>
     </div>
 
