--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
                 <button id="clear">C</button>
                 <button id="change-sign">±</button>
                 <button id="backspace">⌫</button>
-                <button id="divide">/</button>
+                <button class="sign-button">/</button>
                 <button class="number-button">7</button>
                 <button class="number-button">8</button>
                 <button class="number-button">9</button>
-                <button id="multiply">*</button>
+                <button class="sign-button">*</button>
                 <button class="number-button">4</button>
                 <button class="number-button">5</button>
                 <button class="number-button">6</button>
-                <button id="subtract">-</button>
+                <button class="sign-button">-</button>
                 <button class="number-button">1</button>
                 <button class="number-button">2</button>
                 <button class="number-button">3</button>
-                <button id="add">+</button>
+                <button id="add" class="sign-button">+</button>
                 <button class="number-button">0</button>
                 <button id="point">.</button>
                 <button id="equal">=</button>
